--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
           <span>Activate Bot?</span>
         </div>
         <div id="buttons">
-          <iframe src="https://ghbtns.com/github-btn.html?user=chirag64&repo=t-rex-runner-bot&type=star&count=true" frameborder="0" scrolling="0" width="80px" height="20px"></iframe>
-          <iframe src="https://ghbtns.com/github-btn.html?user=chirag64&repo=t-rex-runner-bot&type=fork&count=true" frameborder="0" scrolling="0" width="80px" height="20px"></iframe>
+          <iframe src="https://ghbtns.com/github-btn.html?user=maximousblk&repo=rexbot&type=star&count=true" frameborder="0" scrolling="0" width="80px" height="20px"></iframe>
+          <iframe src="https://ghbtns.com/github-btn.html?user=maximousblk&repo=rexbot&type=fork&count=true" frameborder="0" scrolling="0" width="80px" height="20px"></iframe>
         </div>
         <script src="scripts/runner.js"></script>
         <script src="scripts/bot.js"></script>
